# teitok-python

./: README.md  howto.ipynb  setup.cfg
src/teitok/: ttflair.py  ttxml.py
