[metadata]
name = teitok-maartenpt
version = 0.0.1
author = Maarten Janssen
author_email = janssen@ufal.mff.cuni.cz
description = Python tools for running NLP on TEITOK files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/maartenes/teitok-python
project_urls =
    Bug Tracker = https://gitlab.com/maartenes/teitok-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src